# honest-perspective

./: .gitignore  Package.swift  README.md  README.zh.md  fix.py  geometry.py  requirements.txt  server.py
.github/workflows/: ci.yml  pages.yml
Sources/HonestGeometry/: HonestGeometry.swift
spike_da3/: FINDINGS.md  pyproject.toml  spike.py
spike_geocalib/: FINDINGS.md  pyproject.toml  results.json  spike.py
spike_gravity/: FINDINGS.md  dump_gravity.py  gravity.json  smoke_new.py  test_gravity.py  test_gravity_mapping.py
spike_pf/: FINDINGS.md  compare.py  cross_check_gravity.py  pyproject.toml  spike.py  visualize_field.py
tests/: browser_contract_runner.js  generate_geometry_fixtures.py  test_geometry.py  test_web_runtime.py
tests/HonestGeometryTests/: GeometryContractTests.swift
tests/HonestGeometryTests/Fixtures/: geometry_contract.json
webapp/: geometry.js  index.html  runtime.js
