[project]
name = "spike-da3"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "addict>=2.4.0",
    "e3nn>=0.6.0",
    "einops>=0.8.2",
    "evo>=1.36.4",
    "huggingface-hub>=1.15.0",
    "imageio>=2.37.3",
    "matplotlib>=3.10.9",
    "moviepy==1.0.3",
    "numpy<2",
    "omegaconf>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pillow>=12.2.0",
    "pillow-heif>=1.3.0",
    "plyfile>=1.1.3",
    "pycolmap>=4.0.4",
    "safetensors>=0.7.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "trimesh>=4.12.2",
]
