[project]
name = "spike-pf"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "imageio>=2.37.3",
    "numpy<2",
    "opencv-python>=4.11.0.86",
    "perspective2d",
    "pillow>=12.2.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]

[tool.uv.sources]
perspective2d = { git = "https://github.com/jinlinyi/PerspectiveFields.git" }
